src/components/open-api-page/partials/operation-object/style.module.css
/**
 * Copyright (c) HashiCorp, Inc.
 * SPDX-License-Identifier: MPL-2.0
 */

.root {
	--header-text-color: var(--token-color-foreground-faint);

	margin: 0;
	position: relative;

	&:not(:last-child) {
		margin-bottom: 25px;
	}
}

.meta {
	display: block;
	width: 100%;
}

.title {
	color: var(--token-color-foreground-strong);
}

.titleBadge {
	margin-left: 8px;
}

.endpoint {
	display: block;

	& .endpointInlineCode {
		color: var(--header-text-color);
		background: none;
		border: none;
		padding-left: 0;
		padding-right: 0;
		margin-right: 8px;
		word-break: break-all;
		user-select: text;
		cursor: text;
	}
}

.divider {
	color: var(--token-color-border-primary);
	background-color: var(--token-color-border-primary);
}

.spacer {
	display: block;
	height: 12px;
}

.columnSectionHeading {
	composes: hds-typography-display-200 from global;
	font-weight: var(--token-typography-font-weight-semibold);
	margin: 0 0 8px 0;
	padding-bottom: 8px;
	color: var(--token-color-foreground-strong);

	&:nth-child(2) {
		margin-top: 0;
	}
}

.summary {
	/* Base typography */
	composes: hds-typography-body-200 from global;
	color: var(--token-color-foreground-primary);

	/* Remove the top margin from any first item */
	& > *:first-child {
		margin-top: 0;
	}
	& > *:last-child {
		margin-bottom: 0;
	}

	margin: 8px 0 24px 0;
}

